RESOLVED FIXED286393
CacheStorageRecordInformation is not isolated copied when passed across threads
https://bugs.webkit.org/show_bug.cgi?id=286393
Summary CacheStorageRecordInformation is not isolated copied when passed across threads
Sihui Liu
Reported 2025-01-22 18:05:57 PST
Attachments
Sihui Liu
Comment 1 2025-01-22 18:12:32 PST
EWS
Comment 2 2025-01-24 08:02:27 PST
Committed 289347@main (9d8de91ee2cb): <https://commits.webkit.org/289347@main> Reviewed commits have been landed. Closing PR #39418 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.