Source/WebCore/Modules/webtransport/WebTransportBidirectionalStreamConstructionParameters.h
@@ -41,6 +41,7 @@ struct WebTransportBidirectionalStreamConstructionParameters {
     WEBCORE_EXPORT WebTransportBidirectionalStreamConstructionParameters(WebTransportBidirectionalStreamConstructionParameters&&);
     WEBCORE_EXPORT WebTransportBidirectionalStreamConstructionParameters& operator=(WebTransportBidirectionalStreamConstructionParameters&&);
     WEBCORE_EXPORT ~WebTransportBidirectionalStreamConstructionParameters();
+    WebTransportBidirectionalStreamConstructionParameters isolatedCopy() && { return { identifier, Ref { sink } }; }
 
     WebTransportStreamIdentifier identifier;
     Ref<WritableStreamSink> sink;
